--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </a>
             <ul>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#HowItWorks ">How It Works</a></li>
+                <li><a href="#whatWeDo">What We Do</a></li>
             </ul>
         </nav>
     </header>
@@ -130,7 +130,7 @@
             </div>
         </section>
 
-        <section class="how-it-works">
+        <section id="HowItWorks" class="how-it-works">
             <h2>Process Automation At Your <br>Fingertips. Always.</h2>
             <!-- <p class="subtitle">Data as you want it just arrived.
             </p> -->
@@ -162,7 +162,7 @@
             </div>
         </section>
 
-        <section class="stuff-we-know">
+        <section id="whatWeDo" class="stuff-we-know">
             <h2>Stuff we <span class="emphasized">know</span></h2>
             <h3>We've been here before.</h3>
             <div class="tech-pills">
@@ -264,6 +264,35 @@
                         <div class="review-source">
                             <img src="images/logos/hackernews.webp" alt="HackerNews" class="review-logo">
                             <span class="review-platform">HackerNews</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="examples">
+            <h2>Our solutions in action</h2>
+            <div class="examples-grid">
+                <div class="example-hero">
+                    <img src="images/examples/example-1.webp" alt="Example 1 - Main showcase">
+                    <div class="example-overlay">
+                        <h3>LinkedIn Portfolio Tracking</h3>
+                        <p>Automated monitoring and notifications for portfolio company updates</p>
+                    </div>
+                </div>
+                <div class="example-secondary">
+                    <div class="example-small">
+                        <img src="images/examples/example-2.webp" alt="Example 2">
+                        <div class="example-overlay">
+                            <h4>Social Media Analytics</h4>
+                            <p>Real-time group summaries</p>
+                        </div>
+                    </div>
+                    <div class="example-small">
+                        <img src="images/examples/example-3.webp" alt="Example 3">
+                        <div class="example-overlay">
+                            <h4>Notion Automation</h4>
+                            <p>Client onboarding workflows</p>
                         </div>
                     </div>
                 </div>
