--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="main-container">
         <section class="hero">
             <h2>Data is today's <br><span class="gold">Gold</span></h2>
-            <p>Data Collection. Data Automation</p>
+            <p>Data Collection. Data Automation. <br>Data Useful-ication.</p>
             <button class="cta-button">See Our Work</button>
         </section>
 
@@ -150,7 +150,7 @@
                     <div class="step-icon">
                         <img src="images/icons/delivery.svg" alt="Delivery icon">
                     </div>
-                    <h3>Receive your Proof Of Concept within two business days on average.</h3>
+                    <h3>Receive your Proof Of Concept within five business days on average.</h3>
                 </div>
 
                 <div class="step">
@@ -295,6 +295,49 @@
                             <p>Client onboarding workflows</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="pricing" class="pricing">
+            <div class="pricing-header">
+                <h2>One subscription, endless possibilities</h2>
+                <p class="subtitle">Pause or cancel anytime</p>
+            </div>
+
+            <div class="pricing-grid">
+                <div class="benefit-card">
+                    <div class="benefit-icon">⏸️</div>
+                    <h3>Pause anytime</h3>
+                    <p>Temporarily pause your subscription anytime. No hassle.</p>
+                </div>
+
+                <div class="price-card">
+                    <div class="price-card-header">
+                        <h3>Monthly Club</h3>
+                        <span class="badge">Pause or cancel anytime</span>
+                    </div>
+                    <div class="price-row">
+                        <span class="price">$19,967</span>
+                        <span class="per">/month</span>
+                    </div>
+                    <div class="includes">
+                        <span class="includes-label">Included</span>
+                        <ul class="includes-list">
+                            <li>Unlimited requests</li>
+                            <li>n8n or Python</li>
+                            <li>Average 5 business days for MVP</li>
+                            <li>Design document avg within 24 hours</li>
+                            <li>Pause or cancel anytime</li>
+                        </ul>
+                    </div>
+                    <button class="cta-button full">Join today</button>
+                </div>
+
+                <div class="benefit-card">
+                    <div class="benefit-icon">✅</div>
+                    <h3>100% money‑back</h3>
+                    <p>Try it for a week. Not loving it? Full refund, no questions asked.</p>
                 </div>
             </div>
         </section>
