--- a/index.html
+++ b/index.html
@@ -306,38 +306,45 @@
             </div>
 
             <div class="pricing-grid">
-                <div class="benefit-card">
-                    <div class="benefit-icon">⏸️</div>
-                    <h3>Pause anytime</h3>
-                    <p>Temporarily pause your subscription anytime. No hassle.</p>
+                <div class="price-card">
+                    <div class="price-card-header">
+                        <h3>Day Rate</h3>
+                        <span class="badge">Perfect for quick wins</span>
+                    </div>
+                    <div class="price-row">
+                        <span class="price">€897</span>
+                        <span class="per">/day</span>
+                    </div>
+                    <div class="includes">
+                        <span class="includes-label">Included</span>
+                        <ul class="includes-list">
+                            <li>Design documents, MVPs and more</li>
+                            <li>N8N or Python</li>
+                        </ul>
+                    </div>
+                    <button class="cta-button full">Book a day</button>
                 </div>
 
                 <div class="price-card">
                     <div class="price-card-header">
-                        <h3>Monthly Club</h3>
+                        <h3>Monthly</h3>
                         <span class="badge">Pause or cancel anytime</span>
                     </div>
                     <div class="price-row">
-                        <span class="price">$1,967</span>
+                        <span class="price">€4,997</span>
                         <span class="per">/month</span>
                     </div>
                     <div class="includes">
                         <span class="includes-label">Included</span>
                         <ul class="includes-list">
                             <li>Unlimited requests</li>
-                            <li>n8n or Python</li>
-                            <li>Average 5 business days for MVP</li>
-                            <li>Design document avg within 24 hours</li>
-                            <li>Pause or cancel anytime</li>
+                            <li>Design document within 24 hours</li>
+                            <li>100% money‑back within 7 days</li>
+                            <li>MVP on average within 5 days</li>
+                            <li>N8N or Python</li>
                         </ul>
                     </div>
-                    <button class="cta-button full">Join today</button>
-                </div>
-
-                <div class="benefit-card">
-                    <div class="benefit-icon">✅</div>
-                    <h3>100% money‑back</h3>
-                    <p>Try it for a week. Not loving it? Full refund, no questions asked.</p>
+                    <button class="cta-button full">Start monthly</button>
                 </div>
             </div>
         </section>
