--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             </a>
             <ul>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#HowItWorks ">How It Works</a></li>
+                <li><a href="#HowItWorks">How It Works</a></li>
                 <li><a href="#whatWeDo">What We Do</a></li>
+                <li><a href="#pricing">Pricing</a></li>
             </ul>
         </nav>
     </header>
@@ -167,80 +168,78 @@
             <h3>We've been here before.</h3>
             <div class="tech-pills">
                 <div class="pill pink">
-                    <img src="images/logos/notion.webp" alt="Notion">
+                    <img src="images/logos/notion.svg" alt="Notion">
                     <span>Notion</span>
                 </div>
                 <div class="pill blue">
-                    <img src="images/logos/make.webp" alt="Make.com">
+                    <img src="images/logos/make-com.svg" alt="Make.com">
                     <span>Make.com</span>
                 </div>
-                <div class="pill green">
-                    <img src="images/logos/apify.webp" alt="Apify">
-                    <span>Apify</span>
-                </div>
                 <div class="pill yellow">
-                    <img src="images/logos/n8n.webp" alt="n8n">
+                    <img src="images/logos/n8n.svg" alt="n8n">
                     <span>n8n</span>
                 </div>
                 <div class="pill orange">
-                    <img src="images/logos/python.webp" alt="Python">
+                    <img src="images/logos/python.svg" alt="Python">
                     <span>Python</span>
                 </div>
                 <div class="pill purple">
-                    <img src="images/logos/nodejs.webp" alt="Node.js">
+                    <img src="images/logos/node-js.svg" alt="Node.js">
                     <span>Node.js</span>
                 </div>
                 <div class="pill teal">
-                    <img src="images/logos/react.webp" alt="React">
+                    <img src="images/logos/react.svg" alt="React">
                     <span>React</span>
                 </div>
                 <div class="pill red">
-                    <img src="images/logos/nextjs.webp" alt="Next.js">
+                    <img src="images/logos/next-js.svg" alt="Next.js">
                     <span>Next.js</span>
                 </div>
                 <div class="pill blue-light">
-                    <img src="images/logos/chatgpt.webp" alt="ChatGPT">
+                    <img src="images/logos/chatgpt.svg" alt="ChatGPT">
                     <span>ChatGPT</span>
                 </div>
                 <div class="pill green-light">
-                    <img src="images/logos/claude.webp" alt="Claude">
+                    <img src="images/logos/claude.svg" alt="Claude">
                     <span>Claude</span>
                 </div>
                 <div class="pill purple-light">
-                    <img src="images/logos/llama.webp" alt="Llama">
+                    <img src="images/logos/llama.svg" alt="Llama">
                     <span>Llama</span>
                 </div>
                 <div class="pill orange">
-                    <img src="images/logos/hubspot.webp" alt="HubSpot">
+                    <img src="images/logos/hubspot.svg" alt="HubSpot">
                     <span>HubSpot</span>
                 </div>
                 <div class="pill blue">
-                    <img src="images/logos/zapier.webp" alt="Zapier">
+                    <img src="images/logos/zapier.svg" alt="Zapier">
                     <span>Zapier</span>
                 </div>
                 <div class="pill pink">
-                    <img src="images/logos/clickup.webp" alt="ClickUp">
+                    <img src="images/logos/clickup.svg" alt="ClickUp">
                     <span>ClickUp</span>
                 </div>
                 <div class="pill purple">
-                    <img src="images/logos/elevenlabs.webp" alt="ElevenLabs">
+                    <img src="images/logos/elevenlabs.svg" alt="ElevenLabs">
                     <span>ElevenLabs</span>
                 </div>
-                <div class="pill green">
-                    <img src="images/logos/tally.webp" alt="Tally">
-                    <span>Tally</span>
-                </div>
                 <div class="pill teal">
-                    <img src="images/logos/slack.webp" alt="Slack">
+                    <img src="images/logos/slack.svg" alt="Slack">
                     <span>Slack</span>
                 </div>
                 <div class="pill green-light">
-                    <img src="images/logos/shopify.webp" alt="Shopify">
+                    <img src="images/logos/shopify.svg" alt="Shopify">
                     <span>Shopify</span>
                 </div>
                 <div class="pill blue-light">
-                    <img src="images/logos/google-workspace.webp" alt="Google Workspace">
+                    <img src="images/logos/google-workspace.svg" alt="Google Workspace">
                     <span>Google Workspace</span>
+                </div>
+                <div class="pill purple-light">
+                    <span>Tally</span>
+                </div>
+                <div class="pill blue">
+                    <span>Apify</span>
                 </div>
                 <div class="pill black">
                     <span>+ more</span>
@@ -250,9 +249,10 @@
             <div class="reviews-container">
                 <div class="review">
                     <div class="review-content">
-                        <p class="review-text">"[ProductHunt review content to be added]"</p>
+                        <p class="review-text">"So cool that it made me want to add some interactivity and make a game
+                            out of it."</p>
                         <div class="review-source">
-                            <img src="images/logos/producthunt.webp" alt="ProductHunt" class="review-logo">
+                            <img src="images/logos/producthunt.svg" alt="ProductHunt" class="review-logo">
                             <span class="review-platform">ProductHunt</span>
                         </div>
                     </div>
@@ -260,10 +260,20 @@
 
                 <div class="review">
                     <div class="review-content">
-                        <p class="review-text">"[HackerNews review content to be added]"</p>
+                        <p class="review-text">"Awesome project, enjoyed clicking through these."</p>
                         <div class="review-source">
-                            <img src="images/logos/hackernews.webp" alt="HackerNews" class="review-logo">
+                            <img src="images/logos/hackernews.svg" alt="HackerNews" class="review-logo">
                             <span class="review-platform">HackerNews</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="review">
+                    <div class="review-content">
+                        <p class="review-text">⭐⭐⭐⭐⭐ 5 Star Rated</p>
+                        <div class="review-source">
+                            <img src="images/logos/upwork.svg" alt="Upwork" class="review-logo">
+                            <span class="review-platform">Upwork</span>
                         </div>
                     </div>
                 </div>
