--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <img src="images/services/service-1.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Latest from Portfolio Companies</h3>
-                        <p>Latest LinkedIn Updates in your Inbox or Pushed to your phone</p>
+                        <h3 class="case-study-title">Content Generation</h3>
+                        <p>Use examples to generate relevant content, articles and writings</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -79,7 +79,7 @@
                         <img src="images/services/service-2.webp" alt="Case Study 2">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Social Groups' Summaries & Trends</h3>
+                        <h3 class="case-study-title">Social Media Data</h3>
                         <p>Summaries of your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -90,7 +90,7 @@
                         <img src="images/services/service-3.webp" alt="Case Study 3">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Client Onboarding In Notion</h3>
+                        <h3 class="case-study-title">Custom Dashboards</h3>
                         <p>Automatic Emails, Status Updates & Progress Tracking</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -101,8 +101,9 @@
                         <img src="images/services/service-4.webp" alt="Case Study 4">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Push Notifications & Emails on Cue</h3>
-                        <p>Ticketing Systems, Houses For Sale, New Vacancies Uploaded. We Got Them</p>
+                        <h3 class="case-study-title">Trackers and Alarms</h3>
+                        <p>Push Notifications & Emails on Cue for Ticketing Systems, Houses For Sale, New Vacancies
+                            Uploaded. We Got Them</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -112,7 +113,7 @@
                         <img src="images/services/service-5.webp" alt="Case Study 5">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Automated Google Calendar</h3>
+                        <h3 class="case-study-title">Custom Gmail and Google Calendar tools</h3>
                         <p>Daily Summaries, Automated Rejections, Automated Time Blocks</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -123,8 +124,10 @@
                         <img src="images/services/service-6.webp" alt="Case Study 6">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Viral Competitor Content</h3>
-                        <p>Top Posts from Your Competitors in your Inbox Every Morning</p>
+                        <h3 class="case-study-title">Track Portfolio Companies Or Competitors</h3>
+                        <p>Top Posts from Your Competitors, latest LinkedIn Updates in your Inbox or Pushed to your
+                            phone</p>
+
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
