--- a/index.html
+++ b/index.html
@@ -287,25 +287,25 @@
             <h2>Our Solutions In Action</h2>
             <div class="examples-grid">
                 <div class="example-hero">
-                    <img src="images/examples/example-1.webp" alt="Example 1 - Main showcase">
+                    <img src="images/solutionsinactions/Notion.png" alt="Notion Automation">
                     <div class="example-overlay">
-                        <h3>LinkedIn Portfolio Tracking</h3>
-                        <p>Automated monitoring and notifications for portfolio company updates</p>
+                        <h3>Notion Automation</h3>
+                        <p>Automated workflows and client onboarding systems</p>
                     </div>
                 </div>
                 <div class="example-secondary">
                     <div class="example-small">
-                        <img src="images/examples/example-2.webp" alt="Example 2">
+                        <img src="images/solutionsinactions/N8N - searchleads.png" alt="N8N Lead Search">
                         <div class="example-overlay">
-                            <h4>Social Media Analytics</h4>
-                            <p>Real-time group summaries</p>
+                            <h4>Lead Search Automation</h4>
+                            <p>N8N-powered lead generation</p>
                         </div>
                     </div>
                     <div class="example-small">
-                        <img src="images/examples/example-3.webp" alt="Example 3">
+                        <img src="images/solutionsinactions/Make - slack chatbot.png" alt="Make Slack Chatbot">
                         <div class="example-overlay">
-                            <h4>Notion Automation</h4>
-                            <p>Client onboarding workflows</p>
+                            <h4>Slack Chatbot</h4>
+                            <p>Make.com automated responses</p>
                         </div>
                     </div>
                 </div>
