--- a/index.html
+++ b/index.html
@@ -65,22 +65,23 @@
             <div class="case-studies-grid">
                 <article class="case-study">
                     <div class="case-study-image">
-                        <img src="images/services/service-1.webp" alt="Service 1">
+                        <img src="images/services/service-2.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Content Generation</h3>
-                        <p>Use examples to generate relevant content, articles and writings</p>
+                        <h3 class="case-study-title">Social Media Scraping andContent Generation</h3>
+                        <p>Your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups and posts, used as examples to
+                            generate relevant content</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
 
                 <article class="case-study">
                     <div class="case-study-image">
-                        <img src="images/services/service-2.webp" alt="Case Study 2">
+                        <img src="images/services/service-1.webp" alt="Case Study 2">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Social Media Data</h3>
-                        <p>Summaries of your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups</p>
+                        <h3 class="case-study-title"> Knowledge Databases</h3>
+                        <p>Create a private Chatgpt with access to your knowledge</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -124,7 +125,7 @@
                         <img src="images/services/service-6.webp" alt="Case Study 6">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Track Portfolio Companies Or Competitors</h3>
+                        <h3 class="case-study-title">Portfolio Companies and Competitors tracking</h3>
                         <p>Top Posts from Your Competitors, latest LinkedIn Updates in your Inbox or Pushed to your
                             phone</p>
 
