--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
                             <li>N8N or Python</li>
                         </ul>
                     </div>
-                    <button class="cta-button full">Book a day</button>
+                    <a href="https://buy.stripe.com/4gM28reC52aNbwh2TGe3e02" class="cta-button full" target="_blank"
+                        rel="noopener noreferrer">Book a day</a>
                 </div>
 
                 <div class="price-card">
@@ -358,7 +359,8 @@
                             <li>N8N or Python</li>
                         </ul>
                     </div>
-                    <button class="cta-button full">Start monthly</button>
+                    <a href="https://buy.stripe.com/bJefZhgKd16Jbwhbqce3e01" class="cta-button full" target="_blank"
+                        rel="noopener noreferrer">Start monthly</a>
                 </div>
             </div>
         </section>
