change to ai tigers

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataPlay</title>
+    <title>AI tigers</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body id="top">
     <header>
         <headerTitle>
-            <h1>DataPlay</h1>
-            <img src="images/brand/logo.webp" alt="DataPlay Logo" class="logo">
+            <h1>AI Tigers</h1>
+            <img src="images/brand/logo.webp" alt="AI Tigers Logo" class="logo">
         </headerTitle>
         <nav>
             <a href="#top" class="nav-logo">
@@ -30,7 +30,7 @@
     <main class="main-container">
         <section class="hero">
             <h2>Data is today's <br><span class="gold">Gold</span></h2>
-            <p>Data Collection. Data Automation. <br>Data Useful-ication.</p>
+            <p>Data Collection. AI Generation. <br>AI Automation.</p>
             <a href="#whatWeDo" class="cta-button">See Our Work</a>
         </section>
 
@@ -68,8 +68,8 @@
                         <img src="images/services/service-2.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
-                        <h3 class="case-study-title">Social Media Scraping andContent Generation</h3>
-                        <p>Your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups and posts, used as examples to
+                        <h3 class="case-study-title">Social Media Scraping and Content Generation</h3>
+                        <p>Your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups and Posts, used to
                             generate relevant content</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="case-study-content">
                         <h3 class="case-study-title"> Knowledge Databases</h3>
-                        <p>Create a private Chatgpt with access to your knowledge</p>
+                        <p>Custom Private Chatgpts with all your knowledge at your fingertips</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -104,7 +104,7 @@
                     <div class="case-study-content">
                         <h3 class="case-study-title">Trackers and Alarms</h3>
                         <p>Push Notifications & Emails on Cue for Ticketing Systems, Houses For Sale, New Vacancies
-                            Uploaded. We Got Them</p>
+                            Uploaded</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -298,8 +298,8 @@
                     <div class="example-small">
                         <img src="images/solutionsinactions/N8N - searchleads.png" alt="N8N Lead Search">
                         <div class="example-overlay">
-                            <h4>Lead Search Automation</h4>
-                            <p>N8N-powered lead generation</p>
+                            <h4>Lead Search Automation and CRM</h4>
+                            <p>N8N-powered</p>
                         </div>
                     </div>
                     <div class="example-small">
@@ -371,7 +371,7 @@
 
 
     <footer>
-        <p>&copy; 2025 DataPlay</p>
+        <p>&copy; 2025 AI tigers.com</p>
     </footer>
 </body>
 <script src="script.js"></script>
