--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI tigers</title>
+    <link rel="icon" type="image/x-icon" href="images/brand/logo.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -288,7 +289,7 @@
             <h2>Our Solutions In Action</h2>
             <div class="examples-grid">
                 <div class="example-hero">
-                    <img src="images/solutionsinactions/Notion.png" alt="Notion Automation">
+                    <img src="images/solutionsInActions/Notion.png" alt="Notion Automation">
                     <div class="example-overlay">
                         <h3>Notion Automation</h3>
                         <p>Automated workflows and client onboarding systems</p>
@@ -296,14 +297,14 @@
                 </div>
                 <div class="example-secondary">
                     <div class="example-small">
-                        <img src="images/solutionsinactions/N8N - searchleads.png" alt="N8N Lead Search">
+                        <img src="images/solutionsInActions/N8N - searchleads.png" alt="N8N Lead Search">
                         <div class="example-overlay">
                             <h4>Lead Search Automation and CRM</h4>
                             <p>N8N-powered</p>
                         </div>
                     </div>
                     <div class="example-small">
-                        <img src="images/solutionsinactions/Make - slack chatbot.png" alt="Make Slack Chatbot">
+                        <img src="images/solutionsInActions/Make - slack chatbot.png" alt="Make Slack Chatbot">
                         <div class="example-overlay">
                             <h4>Slack Chatbot</h4>
                             <p>Make.com automated responses</p>
