--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main class="main-container">
         <section class="hero">
             <h2>Data is today's <br><span class="gold">Gold</span></h2>
-            <p>Data Collection. AI Generation. <br>AI Automation.</p>
+            <p>Data Collection.<br> AI Generation. AI Automation.</p>
             <a href="#whatWeDo" class="cta-button">See Our Work</a>
         </section>
 
