--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                 </article>
 
                 <article class="case-study">
-                    <div class="case-study-image">
-                        <img src="images/services/service-1.webp" alt="Case Study 2">
+                    <div class="case-study-image has-video">
+                        <img src="images/services/service-1.webp" alt="Case Study 2" class="service-thumb">
+                        <video src="images/services/service-1-vid.mp4" class="service-video" muted playsinline></video>
                     </div>
                     <div class="case-study-content">
                         <h3 class="case-study-title"> Knowledge Databases</h3>
