update year footer

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 <a href="terms.html">Terms &amp; Conditions</a>
                 <a href="mailto:hello@aitigers.com">hello@aitigers.com</a>
             </div>
-            <p class="footer-copyright">&copy; 2025 AI Tigers. All rights reserved.</p>
+            <p class="footer-copyright">&copy; <span id="footer-year"></span> AI Tigers. All rights reserved.</p>
         </div>
     </footer>
 </body>
