--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </section>
 
         <section class="page-outro">
-            <a href="#pricing" class="outro-cta-button">Book a call</a>
+            <a href="mailto:joris@jorisfalter.com?subject=Schedule%20a%20call%20with%20AI%20Tigers" class="outro-cta-button">Book a call</a>
 
             <div class="outro-brand">
                 <img src="images/brand/logo.webp" alt="AI Tigers Logo" class="outro-logo">
