--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
         </section>
 
         <section class="page-outro">
-            <a href="mailto:joris@jorisfalter.com?subject=Schedule%20a%20call%20with%20AI%20Tigers" class="outro-cta-button">Book a call</a>
+            <a href="mailto:joris@jorisfalter.com?subject=Schedule%20a%20call%20with%20AI%20Tigers"
+                class="outro-cta-button">Book a call</a>
 
             <div class="outro-brand">
                 <img src="images/brand/logo.webp" alt="AI Tigers Logo" class="outro-logo">
@@ -403,7 +404,6 @@
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="terms.html">Terms &amp; Conditions</a>
-                <a href="mailto:hello@aitigers.com">hello@aitigers.com</a>
             </div>
             <p class="footer-copyright">&copy; <span id="footer-year"></span> AI Tigers. All rights reserved.</p>
         </div>
